fix tiktok field

--- a/config.yaml
+++ b/config.yaml
@@ -20,7 +20,7 @@ siteStream:
     - instagramHandle
     - linkedInUrl
     - pinterestUrl
-    - tiktokUrl
+    - tikTokUrl
     - youTubeChannelUrl
     - copyrightMessage
   localization:
